--- a/NP_Config/MainWindow.xaml
+++ b/NP_Config/MainWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NP_Config"
         mc:Ignorable="d"
-        Title="MainWindow" Height="530" Width="1100" Topmost="False" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode="CanResizeWithGrip" AllowsTransparency="True">
+        Title="MainWindow" Height="555" Width="1100" Topmost="False" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode="CanResizeWithGrip" AllowsTransparency="True">
     <Grid>
-        <Border BorderThickness="1" BorderBrush="#FF5C606B" UseLayoutRounding="True">
+        <Border BorderThickness="1" BorderBrush="{DynamicResource Color_7}" UseLayoutRounding="True">
             <Grid Style="{DynamicResource GridStyle_Type2}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="100"></ColumnDefinition>
